force-app/main/default/objects/VCG_CPQ_Bundle__c/VCG_CPQ_Bundle__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Bundle</label>
    <nameField>
        <displayFormat>BD{000000}</displayFormat>
        <label>VCG_CPQ_Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>