force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>Name for the bundle. Each bundle should have a unique name. Once sold, Bundle Names should never change and the products in the bundle should never change. (Any changes should result in a new, separate bundle.)</description>
    <label>Bundle Name</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>