force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Bundle_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product_SKU__c</fullName>
    <formula>Bundle_Product__r.ProductCode</formula>
    <label>Bundle Product SKU</label>
    <type>Text</type>
</CustomField>