force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Bundle_Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Split_Type__c</fullName>
    <description>Indicates whether the Bundle Split value is a % or a dollar amount.</description>
    <label>Bundle Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount - Flat</fullName>
            </value>
            <value>
                <fullName>Amount - Per Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>