force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Can_Override_Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Can_Override_Default_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Override Default Quantity</label>
    <type>Checkbox</type>
</CustomField>