force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only Active bundles will be available for sale. Old bundles need to be kept in the system as long as a customer has a purchased bundle in order to do upgrades &amp; renewals.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>