force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>Indicates the primary product in the bundle that is used to set the controlling quantity.</description>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>