force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Primary_Quantity_Percent__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quantity_Percent__c</fullName>
    <description>The minimum quantity percent allowed for non-primary products. (I.e. non-primary quantity &gt;= primary quantity * Primary_Quantity_Percent)</description>
    <label>Primary Quantity Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>