force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product in the bundle.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Bundles</relationshipLabel>
    <relationshipName>VCG_CPQ_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>