force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>