force-app/main/default/objects/VCG_CPQ_Bundle__c/fields/X_Discount__c.field-meta.xml
<CustomField>
    <fullName>X_Discount__c</fullName>
    <description>To be deleted. Will be moved into a pricing condition &amp; data.</description>
    <label>X-Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>