force-app/main/default/objects/VCG_CPQ_Bundle__c/validationRules/Bundle_Split_required_w_Bundle_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Bundle_Split_required_w_Bundle_Product</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Bundle_Split__c) &amp;&amp; !ISBLANK(Bundle_Product__c)</errorConditionFormula>
    <errorDisplayField>Bundle_Split__c</errorDisplayField>
    <errorMessage>Bundle Split must be specified for Bundles with a Bundle Product.</errorMessage>
</ValidationRule>