force-app/main/default/objects/VCG_CPQ_Bundle__c/validationRules/Split_Type_required_w_Bundle_Split.validationRule-meta.xml
<ValidationRule>
    <fullName>Split_Type_required_w_Bundle_Split</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Bundle_Split_Type__c)) &amp;&amp; !ISBLANK(Bundle_Split__c)</errorConditionFormula>
    <errorDisplayField>Bundle_Split_Type__c</errorDisplayField>
    <errorMessage>Bundle Split Type must be specified if Bundle Split is given.</errorMessage>
</ValidationRule>