force-app/main/default/objects/VCG_CPQ_Bundle__c/validationRules/VCG_CPQ_Require_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>VCG_CPQ_Require_Product</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required</errorMessage>
</ValidationRule>