force-app/main/default/objects/VCG_CPQ_Bundle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bundle_Name__c</columns>
    <columns>Product__c</columns>
    <columns>IsActive__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>Primary__c</columns>
    <columns>Primary_Quantity_Percent__c</columns>
    <columns>Bundle_Product__c</columns>
    <columns>Bundle_Split__c</columns>
    <columns>Bundle_Split_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>